# Sedah

./: .gitignore  README.md  package-lock.json  package.json
backend/: README.md
database/: README.md
frontend/: ARCHITECTURE.md  index.html  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx  bootstrap.tsx
frontend/src/app/hooks/: useThemeRuntime.ts
frontend/src/app/providers/: AppProviders.tsx
frontend/src/app/routes/: AppRouteRenderer.tsx
frontend/src/app/store/: store.ts
frontend/src/domain/auth/: authService.ts  createStubAuthService.ts
frontend/src/navigation/interfaces/: appRoute.ts
frontend/src/services/api-gateway/: apiGateway.ts  createApiGateway.ts  index.ts
frontend/src/settings/config/: defaultAppSettings.ts
frontend/src/settings/interfaces/: appSettings.ts  (+1 more)
middleware/: README.md
server/: README.md
server/gateway/: README.md
server/services/auth/: README.md
src-tauri/: ARCHITECTURE.md  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: bootstrap.rs  mod.rs  setup.rs
src-tauri/src/commands/: mod.rs  runtime.rs  runtime_status.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/linux/: mod.rs
src-tauri/src/platform/macos/: mod.rs
src-tauri/src/platform/windows/: mod.rs
src-tauri/src/services/runtime/: mod.rs  runtime_status_service.rs
src-tauri/src/state/: app_state.rs  mod.rs
src-tauri/src/theme/: mod.rs  native_window.rs
src-tauri/src/window/: main_window.rs  mod.rs
(+69 files in other folders)
