[package]
name = "sedah"
version = "0.1.0"
description = "Sedah desktop runtime"
authors = ["OpenAI Codex"]
edition = "2021"
rust-version = "1.96"

[lib]
name = "sedah_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
